--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,6 @@ Title: Chi-Squared Test
 Author: Harry Peaker
 AuthorUrl: http://www.aridhia.com/
 License: GPL-3
-DisplayMode: normal
+DisplayMode: Showcase
 Tags: chi-square test
 Type: Shiny
